--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,8 @@ jobs:
     - name: Run unit tests with pytest
       run: |
         cd server
-        pytest test_app.py --html=pytest-report.html
+        pytest --html=pytest-report.html
+
 
     - name: Upload pytest report
       uses: actions/upload-artifact@v4
