--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,5 +1,34 @@
+attrs==25.3.0
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
 Flask==2.2.3
 Flask-Cors==3.0.10
-werkzeug==2.2.3
-pytest
-pytest-html
+h11==0.16.0
+idna==3.10
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+outcome==1.3.0.post0
+packaging==25.0
+pluggy==1.6.0
+Pygments==2.19.1
+PySocks==1.7.1
+pytest==8.4.1
+pytest-html==4.1.1
+pytest-metadata==3.1.1
+python-dotenv==1.1.0
+requests==2.32.4
+selenium==4.33.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.13.2
+urllib3==2.4.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+Werkzeug==2.2.3
+wsproto==1.2.0
